# erp_next_v2

./: README.md  pyproject.toml
erpnext_fiscalisation/: api.py  hooks.py  item_group.py  modules.txt  patches.txt  print_api.py
erpnext_fiscalisation/fiscal_harmony_integration/: utils.py
erpnext_fiscalisation/fiscal_harmony_integration/doctype/fiscal_harmony_branch_settings/: fiscal_harmony_branch_settings.js  fiscal_harmony_branch_settings.json  fiscal_harmony_branch_settings.py
erpnext_fiscalisation/fiscal_harmony_integration/doctype/fiscal_harmony_currency_mapping/: fiscal_harmony_currency_mapping.json  fiscal_harmony_currency_mapping.py
erpnext_fiscalisation/fiscal_harmony_integration/doctype/fiscal_harmony_log/: fiscal_harmony_log.js  fiscal_harmony_log.json  fiscal_harmony_log.py  test_fiscal_harmony_log.py
erpnext_fiscalisation/fiscal_harmony_integration/doctype/fiscal_harmony_settings/: fiscal_harmony_settings.js  fiscal_harmony_settings.json  fiscal_harmony_settings.py  test_fiscal_harmony_settings.py
erpnext_fiscalisation/fiscal_harmony_integration/doctype/fiscal_harmony_tax_mapping/: fiscal_harmony_tax_mapping.json  fiscal_harmony_tax_mapping.py
erpnext_fiscalisation/fiscal_harmony_integration/doctype/fiscal_harmony_warehouse_api_credential/: fiscal_harmony_warehouse_api_credential.json  fiscal_harmony_warehouse_api_credential.py
erpnext_fiscalisation/fixtures/: custom_field.json
erpnext_fiscalisation/overrides/doctypes/: sales_invoice.py
erpnext_fiscalisation/patches/v1_2_0/: correct_signature_docstatus.py
(+15 files in other folders)
